[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes_old/Editor/Pin.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="Pin" type="Node2D"]
script = ExtResource( 1 )

[node name="ConnectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectionArea"]
shape = SubResource( 1 )
[connection signal="mouse_entered" from="ConnectionArea" to="." method="_on_ConnectionArea_mouse_entered"]
[connection signal="mouse_exited" from="ConnectionArea" to="." method="_on_ConnectionArea_mouse_exited"]
